--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,16 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon app.js"
+        "server": "nodemon app.js",
+        "client": "npm run start --prefix ../client",
+        "dev": "concurrently -k \"npm run server\" \"npm run client\""
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "compression": "^1.7.4",
+        "concurrently": "^7.4.0",
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "helmet": "^6.0.0",
